front-gateway/src/components/Listing/style/_ohe-list.scss
.listing-choose-date-container {
  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
  margin-bottom: 15px;

  .listing-choose-date-title {
    border-bottom: 1px solid $gray-lighter;
    color: $gray-dark;
    margin: 0 20px;
    padding: 10px 0;
  }

  .list-group-item {
    border: none;
    border-bottom: 1px solid $gray-lighter;
    border-radius: 0;
    margin: 0 20px;
    padding: 5px;

    &.disabled {
      background-color: $brand-white;
    }

    &:not(.disabled) {
      color: #333;
      cursor: pointer;

      .ohe-list-item-text {
        border-radius: 2px;
        line-height: 24px;
      }
    }
  }

  .ohe-list-calendar-icon-container {
    display: inline-block;
    font-size: $font-size-large;
    padding-left: 15px;

    svg {
      width: 15px;
      height: 15px;
    }
  }
}

.ohe-list-date-and-time-container {
  display: inline-block;
  vertical-align: middle;

  span:last-child {
    color: lighten($gray-light, 10%);
    font-size: $font-size-small;
  }
}

.ohe-list-item-text-container {
  color: #9b9b9b;
  float: left;
  height: 41px;
  line-height: 36px;
  text-align: center;

  @media (min-width: $screen-sm-min) {
    padding-left: 10px;
  }
}

.ohe-list-item-text {
  display: inline-block;
  font-size: 12px;
  line-height: 18px;
  vertical-align: middle;
  width: 92px;
}

.ohe-list-open-action-text {
  background-color: #3cb878;
  color: $brand-white;
}

.ohe-list-registered-action-text {
  border: 1px solid #3cb878;
  color: #3cb878;
  line-height: 20px !important;
}

.ohe-list-item-extra-text {
  font-size: 11px;
  line-height: 0;
}

.listing-rented-notification {
  color: #4a4a4a;
  font-size: 13px;
  line-height: 21px;
  padding: 10px 0;
}

.listing-followers-count {
  color: #555;
  font-size: 11px;
  padding-top: 12px;
}

.ohe-list-follow-container {
  text-align: center;

  img {
    width: 100%;
  }

  h4 {
    font-size: 14px;
    margin-top: 0;
    padding: 0;
  }

  h5 {
    padding-top: 15px;
    line-height: $line-height-computed*0.7;
  }

  .follow-container {
    padding-left: 35px;

    .follow-action {
      border: 1px solid #3398db;
      border-radius: 4px;
      color: #3398db;
      cursor: pointer;
      padding: 6px 16px;
      width: 250px;

      &:hover {
        background-color: #3398db;
        border-color: #3398db;
        color: $brand-white;
      }
    }

    .follow-icon {
      padding: 10px;
    }

    .follow-tooltip {
      width: 200px;
    }
  }
}

.ohe-list-loading-container {
  padding-top: 40px;
}

